--- a/src/pages/[...path].astro
+++ b/src/pages/[...path].astro
@@ -2,13 +2,13 @@
 import * as RoutingComponents from "./routes";
 import { widgets, slots } from "../widgets";
 import { cssModules } from "../cssModules";
-import { PageHelper } from "../helpers/PageHelper";
 import Layout from "../layouts/Layout.astro";
+import {PageHelper_mapSearchParamsToAppContext} from "hat-ring-components";
 
 const cacheControlMaxAge = process.env.RESPONSE_HEADER_CACHE_CONTROL_MAX_AGE || 60;
 Astro.response.headers.set('Cache-Control', `public, max-age=${cacheControlMaxAge}`);
 
-const context = PageHelper.mapSearchParamsToAppContext(Astro.locals['hatControllerParams'], {
+const context = PageHelper_mapSearchParamsToAppContext(Astro.locals['hatControllerParams'], {
     widgets, slots,
 }, cssModules);
 
